--- a/testAnalysis.ipynb
+++ b/testAnalysis.ipynb
@@ -27,10 +27,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8617dea0",
+   "id": "3929c77b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   }
  ],
  "metadata": {
